@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <object name="portal_css">
 
-    <stylesheet enabled="True"
+    <stylesheet enabled="True" applyPrefix="True"
         id="++resource++wildcard-media/mediaelementjs/mediaelementplayer.css"
         />
 
